<resources>
    <string name="app_name">Weather Application</string>
    <string name="weather">Weather</string>
    <string name="temperatureDefault">N/A</string>
    <string name="conditionsDefault">N/A</string>
    <string name="celsius">\u2103</string>
    <string name="date" />
    <string name="backButton">Back</string>
    <string name="cityInput">Enter City</string>
    <string name="temperatureInput">Enter temperature</string>
    <string name="humidityInput">Enter humidity</string>
    <string name="pressureInput">Enter pressure</string>
    <string name="pressure">mm</string>
    <string name="nextButton">NEXT</string>
    <string name="empty">Empty cities list</string>
    <string-array name="Cities">
        <item>Moscow,ru</item>
        <item>Saint Petersburg,ru</item>
        <item>Orel,ru</item>
        <item>Volokolamsk,ru</item>
        <item>Sochi,ru</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
        <item>Sochi</item>
    </string-array>
    <string-array name="Conditions">
        <item>@drawable/shine</item>
        <item>@drawable/cloudy</item>
    </string-array>
    <string name="weatherInfoSource">www.worldweatheronline.com</string>
    <string name="about">This weather app was created by Dmitrii Belykh for education purposes.\n Weather info provider is %s</string>
</resources>
